# doun-tauri

./: LICENSE  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: debug.yml  main.yml
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: color.ts  daytime.ts  dev.ts  dropdown.ts  logger.ts  onMount.ts  page.ts  platform.ts  play.ts  schedule.ts  store.ts  tauri_invoker.ts  touch.ts  transition.js
src/lib/components/: Dropdown.svelte  ErrorIndicator.svelte  Header.svelte  HoverField.svelte  HoverText.svelte  Log.svelte  Logo.svelte  NextSchedule.svelte  ScheduleViewTypeSelector.svelte  ScheduleViewer.svelte  SlimHeader.svelte  TemplateDropdown.svelte  TemplateDropdownBody.svelte  TemplateListSchedule.svelte  TemplateSchedule.svelte  TemplateTypeInfo.svelte  TemplateTypeSelector.svelte  Timer.svelte
src/lib/pages/: Guide.svelte  Index.svelte  Info.svelte  Licenses.svelte  Logs.svelte  Migrate.svelte  Settings.svelte  SlimIndex.svelte  Template.svelte  TemplateList.svelte  TemplateNew.svelte  TestRust.svelte  VolumeMixer.svelte
src/lib/pages/introduce/: AskAutoSelect.svelte  AskMigration.svelte  FirstStep.svelte  Guide.svelte  SettingAudio.svelte  SettingAutoSelect.svelte  SettingDisplay.svelte  TemplateGuide.svelte  steps.ts
src/lib/pages/settings/: AudioSettings.svelte  AutoScheduleSettings.svelte  DisplaySetting.svelte  SettingRow.svelte  UtilSettings.svelte
