[package]
name = "doun-tauri"
version = "0.0.0"
description = "타종기"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = [ "devtools" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
rodio = { version = "0.17.3" }
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
encoding_rs = "0.8.33"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-shell = "2.0.1"
syn = "2.0.79"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
